tests/rosetta/out/Dart/bioinformatics-base-count.error
run error: exit status 254
../../tests/rosetta/out/Dart/bioinformatics-base-count.dart:7:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    n = (n as num) - 1;
                   ^
../../tests/rosetta/out/Dart/bioinformatics-base-count.dart:92:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/bioinformatics-base-count.dart:121:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/bioinformatics-base-count.dart:126:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/bioinformatics-base-count.dart:130:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
